FCS-121: Tidy up application dto service (#194)